# gm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
inc/gm/: error.h  gm.h  setup.h
src/: error.c  gm.c  main.c  setup.h
src/context/: context.c  context.h
src/resources/: gl-error.c  gl-error.h  gl_error.c  id.h  resources.c  resources.h
src/resources/frame-buffer/: frame-buffer.c  frame-buffer.h
src/resources/model/: buffer.c  buffer.h  model.c  model.h
src/resources/model/quad/: indices.h  quad.h  vertices.h
src/resources/program/: check-status.c  check-status.h  program.c  program.h  shader.c  shader.h
src/resources/program/shaders/: fragment-shader.h  shaders.h  vertex-shader.h
